# quotes

./: Cargo.toml
migrations/: 20240211021026_initial_db.sql
src/: main.rs
src/controllers/: quotes.rs
