[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.33", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
